Отображение фотографий пользователей

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Личный проект «Кекстаграм (простой)» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-javascript/129268-kekstagram-simple-27.git"
+    "url": "git+ssh://git@github.com/htmlacademy-javascript/129268-kekstagram-simple-27.git"
   },
   "bugs": {
     "url": "https://github.com/htmlacademy-javascript/129268-kekstagram-simple-27/issues"
@@ -16,7 +16,6 @@
     "eslint-config-htmlacademy": "6.0.0"
   },
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "lint": "eslint js/"
@@ -24,5 +23,8 @@
   "engines": {
     "node": "16.x",
     "npm": "8.x"
-  }
+  },
+  "homepage": "https://github.com/htmlacademy-javascript/129268-kekstagram-simple-27#readme",
+  "main": "index.js",
+  "author": ""
 }
